# monitor_intelligence

./: .gitignore  README.md  pyproject.toml  requirements.txt  results.md
checkout_analysis/data/: checkout_1.csv
checkout_analysis/src/: checkout_analysis.ipynb  query.sql
transactions_alert_system/data/: anomalies_detected.csv  transactions.db
transactions_alert_system/src/: anomaly_detector.py  app.py  db_models.py  models.py  notification.py  session.py  test_system.py
