[project]
name = "monitorintelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "ipython>=9.4.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
